# VisualSpider

./: .build-trigger  .gitignore  CHANGELOG.md  LICENSE  PROJECT_PLAN.md  README.md  README_zh-CN.md  index.html  package-lock.json  package.json
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy.yml
scripts/: check-environment.ps1  generate-icons.cjs  install.bat  start.bat
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: disk.rs  lib.rs  main.rs  network.rs  process.rs  registry.rs  service.rs  system.rs
src/components/: HelpPanel.vue  HelpTip.vue  LanguageSwitcher.vue  SetupGuide.vue  UserGuide.vue
src/locales/: en.json  index.ts  zh-CN.json
src/router/: index.ts
src/stores/: appStore.ts  index.ts
src/styles/: dark.css
src/types/: index.ts
src/views/: Advanced.vue  Dashboard.vue  Disk.vue  Logs.vue  Network.vue  Optimization.vue  PowerShell.vue  Processes.vue  QuickActions.vue  Registry.vue  Services.vue  Settings.vue
